# summarizer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dep  README.md  pyproject.toml  pyproject_uv.toml  streamlit_test.py
.devcontainer/: Dockerfile  Dockerfile.Source  devcontainer.json
.github/workflows/: pip_aduit.yml  pull_request.yml
src/summarizer/: __init__.py  document_utils.py  openai_summarizer.py  openai_utils.py
src/summarizer/apps/: fastapi_app.py  fastapi_app_pydantic_test.py  streamlit_app.py  streamlit_cv_adjuster_app.py  streamlit_matrices_app.py
src/summarizer/deprecated_temporarily/summarizers/: openaimodule.py  spacymodule.py  sumymodule.py
src/summarizer/summarizers/: cv_adjuster.py  cv_aduster.py  hfmodule.py  joblistings.py  matrices.py
terraform/: main.tf  main.tfplan  main_example.tf  tfplan  variables.tf
workflows/: pull_request.yml
