[project]
name = "summarizer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tobias Bjormyr", email = "7911343+tobiasbj@users.noreply.github" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "sumy>=0.11.0",
    "setuptools>=75.6.0",
    "lxml[html_clean]>=5.3.0",
    "pip>=24.3.1",
    "transformers>=4.47.0",
    "tensorflow>=2.18.0",
    "tf-keras>=2.18.0",
    "openai>=1.57.1",
    "python-dotenv>=1.0.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "streamlit>=1.41.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/summarizer"]
