[project]
name = "summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tobiasbj", email = "7911343+tobiasbj@users.noreply.github.com" }
]
requires-python = ">= 3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "setuptools>=75.6.0",
    "lxml[html_clean]>=5.3.0",
    "pip>=24.3.1",
    "openai>=1.57.1",
    "python-dotenv>=1.0.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "streamlit>=1.41.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "fastapi>=0.115.7",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "azure-identity>=1.19.0",
    "azure-keyvault-secrets>=4.9.0",
]

[project.scripts]
example-pkg = "summarizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
